--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_base_bloc">
+    
+    <uses-permission android:name="android.permission.CAMERA"/>
+
    <application
         android:label="@string/app_name"
         android:name="${applicationName}"
