--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   
-  #launcher icons
+  # launcher icons
   flutter_launcher_icons: ^0.11.0
+  
+  # state management
+  flutter_bloc: ^8.1.2
+
+  # plugin
+  image_picker: ^0.7.2+1
+  permission_handler: ^10.2.0
+  image_cropper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
