--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   # state management
   flutter_bloc: ^8.1.2
 
+  #gencode
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
+  build_runner: ^2.3.3
+
   # plugin
   image_picker: ^0.7.2+1
   permission_handler: ^10.2.0
