--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   # state management
   flutter_bloc: ^8.1.2
 
+  # network
+  dio: ^4.0.6
+  # http: ^0.13.5
+
   #gencode
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
@@ -52,6 +56,9 @@ dependencies:
   image_picker: ^0.7.2+1
   permission_handler: ^10.2.0
   image_cropper: ^3.0.1
+
+  # save local
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
